Speaker fixes overflow

--- a/src/generator/backend/_scss/application.scss
+++ b/src/generator/backend/_scss/application.scss
@@ -464,11 +464,13 @@ a {
         color: $blue-shade;
         padding:1%;
         line-height:normal;
+        word-wrap: break-word;
       }
       .description {
         margin: 4%;
         text-align: center;
         padding:4px;
+        color: $black;
       }
     }
 
@@ -611,4 +613,41 @@ a {
   padding: 1%;
   display: inline-block;
   cursor:pointer;
+}
+
+//event page
+
+.carousel {
+    height : 500px;
+  }
+  .carousel .item {
+    height :500px;
+  }
+  .carousel-caption {
+    z-index: 10;
+    text-align: left;
+    position: absolute;
+    right: 15%;
+    bottom: 20px;
+    left: 15%;  
+    padding-top: 20px;
+    padding-bottom: 20px;
+    color: #fff;
+    text-shadow: 0 1px 2px rgba(0,0,0,.6);
+  }
+  .carousel-caption h4  {
+     color: #ffffff;
+  }
+  .carousel-caption h1 {
+    color: #ffffff;
+  }
+ @media (min-width: 768px) {
+  .carousel-caption h1 {
+     font-size: 50px;
+  }
+}
+.speaker-info {
+  margin-bottom: 15px;
+  text-align: center;
+  height: 250px;
 }
